Chapter 23/adot-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adot
  labels:
    name: adot
