Chapter 23/ray-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
