Chapter 23/ray-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns1
  namespace: ns1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        # Ray Dashboard
        - path:  /(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: <DOGBOOTH SVC NAME>
              port:
                number: 8265
        # Ray Serve
        - path: /dogbooth/serve/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: <DOGBOOTH SVC NAME>
              port:
                number: 8000
